# foxford-ical-worker

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt  tasks.py  wrangler.toml
src/: foxford.rs  lib.rs  utils.rs
