[package]
name = "foxford-ical-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
getrandom = { version = "0.2.8", features = ["js"] }
icalendar = "0.14.0"
reqwest = "0.11.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
url = "2.2.2"
worker = "0.0.12"

[profile.release]
opt-level = "s"
strip = true
